--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   },
   "exports": "./lib/index.js",
   "bin": {
-    "boilermanager": "./lib/index.js",
     "bpm": "./lib/index.js"
   },
   "scripts": {
@@ -31,8 +30,9 @@
     "commit": "cz",
     "commit:configs": "ts-node --esm ./scripts/update-commits-configs.ts",
     "build": "tsc",
+    "dev": "ts-node --esm ./src/index.ts",
     "start": "node ./lib/index.js",
-    "test": "bash ./scripts/test-commands.sh"
+    "lint:staged": "lint-staged --concurrent false --quiet"
   },
   "dependencies": {
     "axios": "^1.2.2",
@@ -55,6 +55,7 @@
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
     "prettier": "^2.8.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
