--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,9 +1,4 @@
 {
-  "*.{js, jsx, ts, tsx}": [
-    "prettier --write",
-    "eslint --fix"
-  ],
-  "*.{json, md, html, css, scss}": [
-    "prettier --write"
-  ]
+  "*.{js, jsx, ts, tsx}": ["prettier --write", "eslint --fix"],
+  "*.{json, md, html, css, scss, yaml}": ["prettier --write"]
 }
