:recycle: refactor: rollback inquirer and chalk to use commonjs (#14)
in order to reduce complexity of the project

--- a/.czrc
+++ b/.czrc
@@ -5,6 +5,7 @@
       "replaceTypes": true,
       "conventionalFormat": true,
       "skipQuestions": [
+        "scope",
         "breakingBody",
         "issues"
       ],
