--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.2",
   "description": "⚡ a boilerplate manager to start you typescript projects lightning fast.",
   "license": "MIT",
-  "type": "module",
   "keywords": [
     "cli",
     "typescript",
@@ -22,31 +21,32 @@
   "bugs": {
     "url": "https://github.com/js-boilerplate-land/boilermanager/issues"
   },
-  "exports": "./lib/index.js",
+  "exports": "./lib/src/index.js",
   "bin": {
-    "bpm": "./lib/index.js"
+    "bpm": "./lib/src/index.js"
   },
   "scripts": {
     "postinstall": "husky install",
     "commit": "cz",
-    "commit:configs": "ts-node --esm ./scripts/update-commits-configs.ts",
+    "commit:configs": "ts-node ./scripts/update-commits-configs.ts",
     "prettier:check": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "lint:check": "eslint .",
     "lint:fix": "eslint . --fix",
     "lint:staged": "lint-staged --concurrent false --quiet",
     "build": "tsc",
-    "dev": "ts-node --esm ./src/index.ts",
-    "start": "node ./lib/index.js",
+    "dev": "ts-node ./src/index.ts",
+    "start": "node ./lib/src/index.js",
     "test": "bash ./scripts/test-commands.sh",
-    "sc": "ts-node --esm ./scripts/scrapper.ts"
+    "sc": "ts-node ./scripts/scrapper.ts"
   },
   "dependencies": {
     "axios": "^1.2.2",
-    "chalk": "^5.2.0",
+    "chalk": "^4.1.2",
     "commander": "^9.5.0",
+    "dotenv": "^16.0.3",
     "figlet": "^1.5.2",
-    "inquirer": "^9.1.4"
+    "inquirer": "^8.2.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
