--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,13 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "node16",
-    "moduleResolution": "node16",
-    "lib": [
-      "ES2020"
-    ],
+    "target": "ES6",
+    "module": "CommonJS",
+    "moduleResolution": "Node",
+    "resolveJsonModule": true,
     "declaration": true,
+    "esModuleInterop": true,
     "rootDir": "./",
     "outDir": "./lib",
-    "strict": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true, // To provide backwards compatibility, Node.js allows you to import most CommonJS packages with a default import. This flag tells TypeScript that it's okay to use import on CommonJS modules.
+    "strict": true
   }
 }
