--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "commit": "cz",
     "prebuild": "rimraf ./lib",
     "build": "tsc",
+    "build:check": "tsc --noEmit",
     "start": "node ./lib/src/index.js",
     "dev": "ts-node ./src/index.ts",
     "dev:install": "npm install -g .",
