--- a/.prettierignore
+++ b/.prettierignore
@@ -1,5 +1,15 @@
 # https://prettier.io/docs/en/ignore.html
 
+# FOLDERS ###############################
+
+.git/
+.github/
+.husky/
+.vscode/
+ignore/
+lib/
+node_modules/
+
 # FILES #################################
 
 .commitlintrc
@@ -9,16 +19,8 @@
 .eslintrc
 .gitignore
 .lintstagedrc
+.npmignore
 .prettierignore
 .prettierrc
 package.json
 tsconfig.json
-
-# FOLDERS ###############################
-
-.git
-.husky
-.vscode
-lib
-node_modules
-offline
