--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "boilermanager",
-  "version": "0.0.2",
+  "version": "0.0.0-development",
+  "private": "false",
   "description": "⚡ a boilerplate manager to start you typescript projects lightning fast.",
   "license": "MIT",
   "keywords": [
@@ -9,19 +10,21 @@
     "boilerplate-manager",
     "boilerplate"
   ],
-  "homepage": "https://github.com/js-boilerplate-land/boilermanager",
+  "homepage": "https://github.com/ts-boilerplate-land/boilermanager",
   "repository": {
     "type": "git",
-    "url": "https://github.com/js-boilerplate-land/boilermanager.git"
+    "url": "https://github.com/ts-boilerplate-land/boilermanager.git"
   },
   "author": {
     "name": "Lucas Vieira",
     "email": "lucasvtiradentes@gmail.com"
   },
   "bugs": {
-    "url": "https://github.com/js-boilerplate-land/boilermanager/issues"
+    "url": "https://github.com/ts-boilerplate-land/boilermanager/issues"
   },
   "exports": "./lib/src/index.js",
+  "types": "./lib/src/index.d.ts",
+  "main": "./lib/src/index.js",
   "bin": {
     "bpm": "./lib/src/index.js"
   },
@@ -31,6 +34,9 @@
     "prebuild": "rimraf ./lib",
     "build": "tsc",
     "build:check": "tsc --noEmit",
+    "pub": "semantic-release",
+    "pub:check": "npm publish --dry-run",
+    "pub:build": "npm pack && tar -xvzf *.tgz",
     "start": "node ./lib/src/index.js",
     "dev": "ts-node ./src/index.ts",
     "dev:install": "npm install -g .",
@@ -52,6 +58,8 @@
   },
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
+    "@semantic-release/changelog": "^6.0.2",
+    "@semantic-release/git": "^10.0.1",
     "@types/figlet": "^1.5.5",
     "@types/inquirer": "^9.0.3",
     "@types/node": "^18.11.9",
@@ -66,8 +74,9 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.0",
+    "rimraf": "^4.0.4",
+    "semantic-release": "^19.0.5",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3",
-    "rimraf": "^4.0.4"
+    "typescript": "^4.9.3"
   }
 }
