:bug: bugfix: fix integration between eslint and prettier (#10)
fix prettier and eslint integration. closes #10

See issues: 10

--- a/.czrc
+++ b/.czrc
@@ -6,8 +6,7 @@
       "conventionalFormat": true,
       "skipQuestions": [
         "scope",
-        "breakingBody",
-        "issues"
+        "breakingBody"
       ],
       "types": [
         {
