--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES6",
+    "target": "ES2016",
     "module": "CommonJS",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
@@ -8,7 +8,8 @@
     "esModuleInterop": true,
     "rootDir": "./",
     "outDir": "./lib",
-    "strict": true
+    "strict": true,
+    "skipLibCheck": true
   },
   "include": [
     "./src/**/*"
