:white_check_mark: tests: add tests setup with jest (#11)
add jest to the project. closes #11

See issues: 11

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,10 @@
 {
-  "*.{js, jsx, ts, tsx}": ["prettier --write", "eslint --fix"],
-  "*.{json, md, html, css, scss, yaml}": ["prettier --write"]
+  "*.{js, jsx, ts, tsx}": [
+    "prettier --write",
+    "eslint --fix",
+    "jest --passWithNoTests --findRelatedTests"
+  ],
+  "*.{json, md, html, css, scss, yaml}": [
+    "prettier --write"
+  ]
 }
