--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,10 +13,7 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
-    "sourceType": "module",
-    "project": [
-      "./tsconfig.json"
-    ]
+    "sourceType": "module"
   },
   "plugins": [
     "@typescript-eslint",
