--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "boilermanager",
-  "version": "0.0.2",
+  "version": "0.0.0-development",
   "description": "⚡ a boilerplate manager to start you typescript projects lightning fast.",
   "license": "MIT",
   "keywords": [
