:wrench: config: update issues templates (#20)
update issues templates, now we are using issue forms

See issues: 20

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,9 @@
   "rules": {
     "prettier/prettier": [
       "error"
+    ],
+    "@typescript-eslint/no-explicit-any": [
+      "off"
     ]
   }
 }
