:bug: bugfix: fix package husky bug (#19)
fix husky bug

See issues: 19

--- a/.eslintignore
+++ b/.eslintignore
@@ -23,7 +23,9 @@ node_modules/
 .npmignore
 .prettierignore
 .prettierrc.json
+jest.config.js
 package.json
+release.config.js
 tsconfig.json
 
 package-lock.json
