--- a/.github/ISSUE_TEMPLATE/2-BUG-REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/2-BUG-REPORT.yml
@@ -1,6 +1,6 @@
 name: "🐛 Bug Report"
 description: Create a new ticket for a bug.
-title: "🐛 [BUG] - <title>"
+title: "🐛 [BUG] - <change here>"
 labels: [
   "bug"
 ]
@@ -10,15 +10,9 @@ body:
     attributes:
       label: "Description"
       description: Please enter an explicit description of your issue
-      placeholder: Short and explicit description of your incident...
-    validations:
-      required: true
-  - type: input
-    id: reprod-url
-    attributes:
-      label: "Reproduction URL"
-      description: Please enter your GitHub URL to provide a reproduction of the issue
-      placeholder: ex. https://github.com/USERNAME/REPO-NAME
+      placeholder: |
+        ex: Short and explicit description of your incident...
+        ![DESCRIPTION](https://www.techslang.com/wp-content/uploads/2021/08/9359-e1629798707656.jpg)
     validations:
       required: true
   - type: textarea
@@ -29,41 +23,16 @@ body:
       value: |
         1. Go to '...'
         2. Click on '....'
-        3. Scroll down to '....'
-        4. See error
+        3. See error
       render: bash
     validations:
       required: true
-  - type: textarea
-    id: screenshot
-    attributes:
-      label: "Screenshots"
-      description: If applicable, add screenshots to help explain your problem.
-      value: |
-        ![DESCRIPTION](LINK.png)
-      render: bash
-    validations:
-      required: false
   - type: textarea
     id: logs
     attributes:
       label: "Logs"
       description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
       render: bash
-    validations:
-      required: false
-  - type: dropdown
-    id: browsers
-    attributes:
-      label: "Browsers"
-      description: What browsers are you seeing the problem on ?
-      multiple: true
-      options:
-        - Firefox
-        - Chrome
-        - Safari
-        - Microsoft Edge
-        - Opera
     validations:
       required: false
   - type: dropdown
