:sparkles: feature: get package details from package.json (#22)
get detaisl from package.json

See issues: 22

--- a/.github/ISSUE_TEMPLATE/1-FEATURE-REQUEST.yml
+++ b/.github/ISSUE_TEMPLATE/1-FEATURE-REQUEST.yml
@@ -1,6 +1,6 @@
 name: "💡 Feature Request"
 description: Create a new ticket for a new feature request
-title: "💡 [REQUEST] - <change here>"
+title: "💡 [FEATURE] - <change here>"
 labels: [
   "feature"
 ]
