--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "boilermanager",
   "version": "1.2.2",
-  "description": "⚡ a boilerplate manager to start you typescript projects lightning fast.",
+  "description": "zap quickstart your nodejs based projects by choosing a pre setted up boilerplate, as well as manage yours.",
   "license": "MIT",
   "keywords": [
     "cli",
