--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "chalk": "^4.1.2",
     "commander": "^9.5.0",
     "figlet": "^1.5.2",
-    "inquirer": "^8.2.3"
+    "inquirer": "^8.2.3",
+    "update-notifier": "^5.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
@@ -67,6 +68,7 @@
     "@types/inquirer": "^9.0.3",
     "@types/jest": "^29.2.5",
     "@types/node": "^18.11.9",
+    "@types/update-notifier": "^6.0.1",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "commitizen": "^4.2.6",
