--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "boilermanager",
-  "version": "1.3.4",
   "description": "zap quickstart your nodejs based projects by choosing a pre setted up boilerplate, as well as manage yours.",
+  "version": "1.3.4",
   "license": "MIT",
   "keywords": [
     "cli",
@@ -9,13 +9,9 @@
     "boilerplate-manager",
     "boilerplate"
   ],
-  "homepage": "https://github.com/ts-boilerplate-land/boilermanager",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ts-boilerplate-land/boilermanager.git"
-  },
-  "bugs": {
-    "url": "https://github.com/ts-boilerplate-land/boilermanager/issues"
+    "url": "https://github.com/lucasvtiradentes/boilermanager.git"
   },
   "author": {
     "name": "Lucas Vieira",
@@ -23,70 +19,79 @@
   },
   "types": "./lib/src/index.d.ts",
   "bin": {
-    "bpm": "./lib/src/index.js"
+    "bpm": "./lib/src/index.js",
+    "boilermanager": "./lib/src/index.js"
   },
   "scripts": {
     "prepare": "husky install",
+    "precommit": "npm run script:issues",
     "commit": "cz",
     "prebuild": "rimraf ./lib",
     "build": "tsc",
     "build:check": "tsc --noEmit",
+    "pub": "semantic-release",
+    "pub:check": "npm publish --dry-run",
+    "pub:build": "npm pack && tar -xvzf *.tgz",
+    "start": "node ./lib/src/index.js",
+    "dev": "ts-node ./src/index.ts -l",
+    "dev1": "ts-node ./src/index.ts -r \"lucasvtiradentes/ts-boilerplates\"",
+    "dev:install": "npm install -g .",
     "test": "jest --passWithNoTests",
     "test:commands": "bash ./tests/test-commands.sh",
     "test:watch": "jest --passWithNoTests --watchAll",
     "test:staged": "jest --passWithNoTests --findRelatedTests",
     "test:coverage": "jest --passWithNoTests --coverage",
-    "pub": "semantic-release",
-    "pub:check": "npm publish --dry-run",
-    "pub:build": "npm pack && tar -xvzf *.tgz",
-    "start": "node ./lib/src/index.js",
-    "dev": "ts-node ./src/index.ts",
-    "dev:install": "npm install -g .",
     "prettier:check": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "lint:check": "eslint .",
     "lint:fix": "eslint . --fix",
     "lint:staged": "lint-staged --concurrent false --quiet",
-    "scripts:gitmoji": "ts-node ./scripts/gitmoji-util.ts",
-    "scripts:issues": "ts-node ./scripts/github-issues-util.ts"
+    "script:gitmoji": "ts-node ./scripts/gitmoji-setup.ts",
+    "script:issues": "ts-node ./scripts/github-issues.ts"
   },
   "dependencies": {
     "axios": "^1.2.2",
     "chalk": "^4.1.2",
     "commander": "^9.5.0",
     "figlet": "^1.5.2",
+    "fuse.js": "^6.6.2",
     "inquirer": "^8.2.3",
+    "inquirer-autocomplete-prompt": "^2.0.0",
     "update-notifier": "^5.1.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.3.0",
+    "@types/figlet": "^1.5.5",
+    "@types/inquirer": "^9.0.3",
+    "@types/inquirer-autocomplete-prompt": "^3.0.0",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.9",
+    "@types/update-notifier": "^6.0.1",
+    
     "@semantic-release/changelog": "^6.0.2",
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/release-notes-generator": "^10.0.3",
-    "@types/figlet": "^1.5.5",
-    "@types/inquirer": "^9.0.3",
-    "@types/jest": "^29.2.5",
-    "@types/node": "^18.11.9",
-    "@types/update-notifier": "^6.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
+    "semantic-release": "^19.0.5",
+    
     "commitizen": "^4.2.6",
     "commitizen-emoji": "^1.0.5",
-    "commitlint": "^17.4.1",
-    "commitlint-config-gitmoji": "^2.2.9",
-    "conventional-changelog-conventionalcommits": "^5.0.0",
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.4.2",
+    
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.3",
-    "jest": "^29.3.1",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.2",
-    "rimraf": "^4.0.4",
-    "semantic-release": "^19.0.5",
+
+    "jest": "^29.3.1",
     "ts-jest": "^29.0.5",
+
     "ts-node": "^10.9.1",
+    "rimraf": "^4.0.4",
+    "husky": "^8.0.3",
     "typescript": "^4.9.3"
   }
 }
