:sparkles: feature: add way to handle customizable boilerplates (#13)
now supports customizable boilerplates

See issues: 13

--- a/.npmignore
+++ b/.npmignore
@@ -16,7 +16,6 @@ src/
 
 # FILES #################################
 
-.commitlintrc
 .czrc
 .editorconfig
 .eslintignore
@@ -26,8 +25,12 @@ src/
 .npmignore
 .prettierignore
 .prettierrc.json
+commitlint.config.js
 jest.config.js
+# LICENSE
 # package.json
-pnpm-lock.yaml
+# README.md
 release.config.js
 tsconfig.json
+
+pnpm-lock.yaml
