--- a/.prettierignore
+++ b/.prettierignore
@@ -7,13 +7,13 @@
 .husky/
 .vscode/
 coverage/
+docs/
 ignore/
 lib/
 node_modules/
 
 # FILES #################################
 
-.commitlintrc
 .czrc
 .editorconfig
 .eslintignore
@@ -23,11 +23,14 @@ node_modules/
 .npmignore
 .prettierignore
 .prettierrc.json
-jest.config.json
+commitlint.config.js
+jest.config.js
+LICENSE
 package.json
+README.md
 release.config.js
 tsconfig.json
 
 package-lock.json
-yarn.lock
 pnpm-lock.yaml
+yarn.lock
