:art: codestyle: add strategy pattern to download github folder (#38)
add strategy design pattern

See issues: 38

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prepare": "husky install",
     "precommit": "npm run script:issues",
     "commit": "cz",
+
     "prebuild": "rimraf ./lib",
     "build": "tsc",
     "build:check": "tsc --noEmit",
@@ -35,6 +36,7 @@
     "start": "node ./lib/src/index.js",
     "dev": "ts-node ./src/index.ts",
     "dev:install": "npm install -g .",
+
     "test": "jest --passWithNoTests",
     "test:watch": "jest --passWithNoTests --watchAll",
     "test:coverage": "jest --passWithNoTests --coverage",
@@ -47,6 +49,7 @@
     "script:issues": "ts-node ./scripts/github-issues.ts"
   },
   "dependencies": {
+    "@octokit/rest": "^19.0.7",
     "axios": "^1.2.2",
     "chalk": "^4.1.2",
     "commander": "^9.5.0",
