--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "keywords": [
     "cli",
-    "typescript",
+    "nodejs",
     "boilerplate-manager",
     "boilerplate"
   ],
@@ -54,35 +54,36 @@
     "fuse.js": "^6.6.2",
     "inquirer": "^8.2.3",
     "inquirer-autocomplete-prompt": "^2.0.0",
-    "update-notifier": "^5.1.0"
+    "update-notifier": "^5.1.0",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.3.0",
-    "@commitlint/config-conventional": "^17.4.2",
-    "@semantic-release/changelog": "^6.0.2",
-    "@semantic-release/commit-analyzer": "^9.0.2",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/release-notes-generator": "^10.0.3",
     "@types/figlet": "^1.5.5",
     "@types/inquirer": "^9.0.3",
     "@types/inquirer-autocomplete-prompt": "^3.0.0",
     "@types/jest": "^29.2.5",
     "@types/node": "^18.11.9",
     "@types/update-notifier": "^6.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
+    "@semantic-release/changelog": "^6.0.2",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/release-notes-generator": "^10.0.3",
+    "semantic-release": "^19.0.5",
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.4.2",
     "commitizen": "^4.2.6",
     "commitizen-emoji": "^1.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.3",
-    "jest": "^29.3.1",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.2",
-    "rimraf": "^4.0.4",
-    "semantic-release": "^19.0.5",
+    "jest": "^29.3.1",
     "ts-jest": "^29.0.5",
+    "husky": "^8.0.3",
+    "rimraf": "^4.0.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   }
