:wrench: config: update general project config files

--- a/package.json
+++ b/package.json
@@ -23,28 +23,17 @@
     "boilermanager": "./lib/src/index.js"
   },
   "scripts": {
-    "prepare": "husky install",
-    "precommit": "npm run script:issues",
-    "commit": "cz",
-    "prebuild": "rimraf ./lib",
-    "build": "tsc",
-    "build:check": "tsc --noEmit",
+    "start": "node ./lib/src/index.js",
+    "dev": "tsx ./src/index.ts --alt",
+    "build": "rimraf ./lib && tsc",
+    "test": "jest --passWithNoTests",
+    "test:coverage": "jest --passWithNoTests --coverage",
+    "test:package": "npm install -g .",
     "pub": "semantic-release",
     "pub:check": "npm publish --dry-run",
-    "pub:build": "npm pack && tar -xvzf *.tgz",
-    "start": "node ./lib/src/index.js",
-    "dev": "ts-node ./src/index.ts --alt",
-    "dev:install": "npm install -g .",
-    "test": "jest --passWithNoTests",
-    "test:watch": "jest --passWithNoTests --watchAll",
-    "test:coverage": "jest --passWithNoTests --coverage",
-    "prettier:check": "prettier --check .",
-    "prettier:fix": "prettier --write .",
-    "lint:check": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "lint:staged": "lint-staged --concurrent false --quiet",
-    "script:gitmoji": "ts-node ./scripts/gitmoji-setup.ts",
-    "script:issues": "ts-node ./scripts/github-issues.ts"
+    "prepare": "husky install",
+    "commit": "cz",
+    "lint:staged": "lint-staged --concurrent false --quiet"
   },
   "dependencies": {
     "axios": "^1.2.2",
@@ -64,27 +53,27 @@
     "@types/jest": "^29.2.5",
     "@types/node": "^18.11.9",
     "@types/update-notifier": "^6.0.1",
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.4.2",
+    "commitizen": "^4.2.6",
+    "commitizen-emoji": "^1.0.5",
     "@semantic-release/changelog": "^6.0.2",
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/release-notes-generator": "^10.0.3",
     "semantic-release": "^19.0.5",
-    "@commitlint/cli": "^17.3.0",
-    "@commitlint/config-conventional": "^17.4.2",
-    "commitizen": "^4.2.6",
-    "commitizen-emoji": "^1.0.5",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "lint-staged": "^13.1.0",
     "prettier": "^2.8.2",
+    "lint-staged": "^13.1.0",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.5",
     "husky": "^8.0.3",
     "rimraf": "^4.0.4",
-    "ts-node": "^10.9.1",
+    "tsx": "^3.12.6",
     "typescript": "^4.9.3"
   }
 }
